--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:rotationX="-13"
     tools:context=".ui.dashboard.DashboardFragment">
 
     <!-- Başlık: Dashboard -->
@@ -11,98 +12,107 @@
         android:id="@+id/text_dashboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dashboard"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
-        android:textAlignment="center"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/rounded_background"
-        android:drawablePadding="16dp"/>
+        android:drawablePadding="16dp"
+        android:text="Dashboard"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Voltage -->
     <TextView
         android:id="@+id/voltageText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Voltage"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="24dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@id/text_dashboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
         android:background="@drawable/rounded_background"
         android:drawableLeft="@drawable/ic_voltage"
+        android:drawablePadding="16dp"
         android:gravity="center_vertical"
-        android:drawablePadding="16dp"/>
+        android:padding="12dp"
+        android:text="Voltage"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_dashboard" />
 
     <!-- Altitude -->
     <TextView
         android:id="@+id/altitudeText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Altitude"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@id/voltageText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
         android:background="@drawable/rounded_background"
         android:drawableLeft="@drawable/measure"
-        android:gravity="center_vertical"
         android:drawablePadding="16dp"
-        />
+        android:gravity="center_vertical"
+        android:padding="12dp"
+        android:text="Altitude"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/voltageText" />
 
     <!-- GPS -->
     <TextView
         android:id="@+id/gpsText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="GPS"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@id/altitudeText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
         android:background="@drawable/rounded_background"
         android:drawableLeft="@drawable/location"
+        android:drawablePadding="16dp"
         android:gravity="center_vertical"
-        android:drawablePadding="16dp"/>
+        android:padding="12dp"
+        android:text="GPS"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/altitudeText" />
 
     <!-- Flight Time -->
     <TextView
         android:id="@+id/flightTimeText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Flight Time"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@id/gpsText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
         android:background="@drawable/rounded_background"
         android:drawableLeft="@drawable/hourglass"
+        android:drawablePadding="16dp"
         android:gravity="center_vertical"
-        android:drawablePadding="16dp"/>
+        android:padding="12dp"
+        android:text="Flight Time"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gpsText" />
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flightTimeText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
